# tarsila

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  features.md  issues.md
.github/workflows/: build.yml  checks.yml  coverage.yml  tests.yml
docs/: features.md  install.md  issues.md  user_guide.md
egui-macroquad/: Cargo.toml  README.md
egui-macroquad/src/: lib.rs
lapix/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
lapix-core/: Cargo.toml
lapix-core/src/: canvas.rs  color.rs  event.rs  graphics.rs  lib.rs  primitives.rs  state.rs
lapix-ui/: Cargo.toml
lapix-ui/src/: gui.rs  keyboard.rs  main.rs  mouse.rs  shortcut.rs  ui_state.rs  util.rs  wrapped_image.rs
lapix-ui/src/gui/: layers.rs  mod.rs  toolbar.rs
lapix/src/: action.rs  bitmap.rs  canvas.rs  color.rs  error.rs  event.rs  floating.rs  graphics.rs  layer.rs  lib.rs  palette.rs  primitives.rs  state.rs  tool.rs  transform.rs  util.rs
lapix/tests/: integration.rs
tarsila/: CHANGELOG.md  Cargo.toml  README.md
tarsila/src/: bg.rs  error.rs  graphics.rs  keyboard.rs  main.rs  mouse.rs  project.rs  resource.rs  ui_state.rs  util.rs  wrapped_image.rs
tarsila/src/gui/: layers.rs  menu.rs  mod.rs  palette.rs  preview.rs  status.rs  toolbar.rs
tarsila/src/input/: bindings.rs  manager.rs  mapper.rs  mod.rs
