[package]
name = "egui-macroquad-fork"
authors = ["Ilya Sheprut <optozorax@gmail.com>", "Y. D. Santos <yds12@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/yds12/tarsila"
repository = "https://github.com/yds12/tarsila"
description = "Bindings between egui and macroquad"
readme="README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[dependencies]
egui = "0.21.0"
# TODO use a crates.io version when 0.15 is released
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad", rev = "474b8c825887dbe93dd7d28c62266a31ef55a6e8" }
macroquad = "0.3.25"
