[package]
name = "egui-macroquad-fork"
authors = ["Ilya Sheprut <optozorax@gmail.com>", "Y. D. Santos <yds12@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/yds12/tarsila"
repository = "https://github.com/yds12/tarsila"
description = "Bindings between egui and macroquad"
readme="README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[dependencies]
egui = "0.21.0"
egui-miniquad = "0.14.0"
macroquad = "0.3.25"
