[package]
name = "lapix-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapix-core = { path = "../lapix-core" }
egui-macroquad = { path = "../egui-macroquad" }
macroquad = "0.3.25"
egui = "0.20.1"
rfd = "0.10.0"
