[package]
name = "lapix"
authors = ["Y. D. Santos <yds12@protonmail.com>"]
version = "0.1.1"
edition = "2021"
description = "Image editor backend library for pixel art"
homepage = "https://github.com/yds12/tarsila"
repository = "https://github.com/yds12/tarsila"
readme = "README.md"
documentation = "https://docs.rs/lapix/latest/"
keywords = ["image", "pixel", "pixel-art", "image-editor", "editor"]
categories = ["game-development", "graphics", "multimedia", "multimedia::images", "rendering"]
license = "MIT/Apache-2.0"

[features]
test-utils = []

[dependencies]
bincode = "1.3.3"
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
test-case = "2.2.2"
