[package]
name = "tarsila"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapix = { path = "../lapix" }
egui-macroquad = { version = "0.1.0", path = "../egui-macroquad" }
macroquad = "0.3.25"
rfd = "0.10.0"
egui = "0.21.0"
serde = { version = "1.0.152", features = ["derive"] }
