[package]
name = "tarsila"
authors = ["Y. D. Santos <yds12@protonmail.com>"]
version = "0.1.0"
edition = "2021"
description = "GUI image editor for pixel art"
homepage = "https://github.com/yds12/tarsila"
repository = "https://github.com/yds12/tarsila"
readme = "README.md"
documentation = "https://docs.rs/tarsila/latest/"
keywords = ["image", "pixel", "pixel-art", "image-editor", "editor"]
categories = ["game-development", "graphics", "multimedia", "multimedia::images", "rendering"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapix = { path = "../lapix", version = "0.1.0" }
egui-macroquad = { version = "0.15.0", default-features = false }
macroquad = "0.3.25"
rfd = "0.10.0"
egui = "0.21.0"
serde = { version = "1.0.152", features = ["derive"] }

